[gd_scene load_steps=21 format=3 uid="uid://bxmshhr81r5p6"]

[ext_resource type="Theme" uid="uid://dkrs350vaq2kh" path="res://addons/RPGMap/Assets/Themes/dialog_theme.tres" id="1_dx6mh"]
[ext_resource type="Script" uid="uid://dhxssojnarwv1" path="res://addons/CustomControls/Dialogs/CommandEvents/change_user_parameter_dialog.gd" id="2_dx6mh"]
[ext_resource type="PackedScene" uid="uid://bealtmarqhbfs" path="res://addons/CustomControls/custom_option_button.tscn" id="3_5yh8c"]
[ext_resource type="PackedScene" uid="uid://bj48rsidmna6s" path="res://addons/CustomControls/custom_spin_box.tscn" id="4_fb4u3"]
[ext_resource type="PackedScene" uid="uid://bnx7omk3joxly" path="res://addons/CustomControls/custom_button.tscn" id="5_ede07"]
[ext_resource type="Texture2D" uid="uid://bkfn4ru5noaaa" path="res://addons/CustomControls/Images/button1_background_disabled.png" id="6_q4jjv"]
[ext_resource type="Texture2D" uid="uid://dqnnp323vr1vo" path="res://addons/CustomControls/Images/button1_background_hover.png" id="7_ktol5"]
[ext_resource type="Texture2D" uid="uid://beg6i1p118qd" path="res://addons/CustomControls/Images/button1_background_selected.png" id="8_dsgco"]
[ext_resource type="Texture2D" uid="uid://xl88b63otgpi" path="res://addons/CustomControls/Images/button1_background.png" id="9_jlpcj"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_u11f1"]

[sub_resource type="Gradient" id="Gradient_u5yrp"]
colors = PackedColorArray(0.184314, 0.2, 0.207843, 1, 0.278431, 0.294118, 0.301961, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_6yyp3"]
gradient = SubResource("Gradient_u5yrp")
fill_from = Vector2(0.5, 1)
fill_to = Vector2(0.5, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_subod"]
texture = ExtResource("9_jlpcj")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mjylh"]
texture = ExtResource("8_dsgco")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7qdgr"]
texture = ExtResource("7_ktol5")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qiqap"]
texture = ExtResource("6_q4jjv")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_maa40"]
texture = ExtResource("9_jlpcj")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5stfh"]
texture = ExtResource("8_dsgco")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4sujn"]
texture = ExtResource("7_ktol5")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hfo07"]
texture = ExtResource("6_q4jjv")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[node name="ChangeUserParameterDialog" type="Window"]
oversampling_override = 1.0
title = "Change user Parameter"
position = Vector2i(0, 36)
size = Vector2i(480, 254)
wrap_controls = true
transient = true
exclusive = true
unresizable = true
theme = ExtResource("1_dx6mh")
script = ExtResource("2_dx6mh")

[node name="Background" type="TextureRect" parent="."]
material = SubResource("CanvasItemMaterial_u11f1")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_6yyp3")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Target:"

[node name="Targets" parent="MarginContainer/VBoxContainer" instance=ExtResource("3_5yh8c")]
unique_name_in_owner = true
layout_mode = 2

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Parameter:"

[node name="ParamOptions" parent="MarginContainer/VBoxContainer" instance=ExtResource("3_5yh8c")]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "[title]Parameters[/title]
List of user parameters added to the database"
text_overrun_behavior = 3
selected = 0
fit_to_longest_item = false
item_count = 2
popup/item_0/text = "1: Param 1"
popup/item_0/id = 0
popup/item_1/text = "2: Param 2"
popup/item_1/id = 1

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Value:"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Value" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("4_fb4u3")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Change the value of the selected user parameter"
step = 0.001
rounded = false
allow_greater = true
allow_lesser = true

[node name="SetDefaultButton" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("5_ede07")]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "[title]Set Default Value[/title]
Change the value to the default value of the selected user parameter."
theme_override_styles/normal = SubResource("StyleBoxTexture_subod")
theme_override_styles/pressed = SubResource("StyleBoxTexture_mjylh")
theme_override_styles/hover = SubResource("StyleBoxTexture_7qdgr")
theme_override_styles/disabled = SubResource("StyleBoxTexture_qiqap")
text = "Set Default"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 12

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
alignment = 1

[node name="OKButton" parent="MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("5_ede07")]
unique_name_in_owner = true
custom_minimum_size = Vector2(210, 0)
layout_mode = 2
tooltip_text = "[title]Ok[/title]
Saves all changes and closes the windows."
theme_override_styles/normal = SubResource("StyleBoxTexture_subod")
theme_override_styles/pressed = SubResource("StyleBoxTexture_mjylh")
theme_override_styles/hover = SubResource("StyleBoxTexture_7qdgr")
theme_override_styles/disabled = SubResource("StyleBoxTexture_qiqap")
text = "OK"

[node name="CancelButton" parent="MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("5_ede07")]
unique_name_in_owner = true
custom_minimum_size = Vector2(210, 0)
layout_mode = 2
tooltip_text = "[title]Cancel[/title]
Closes this window without saving any changes."
theme_override_styles/normal = SubResource("StyleBoxTexture_maa40")
theme_override_styles/pressed = SubResource("StyleBoxTexture_5stfh")
theme_override_styles/hover = SubResource("StyleBoxTexture_4sujn")
theme_override_styles/disabled = SubResource("StyleBoxTexture_hfo07")
text = "CANCEL"

[connection signal="item_selected" from="MarginContainer/VBoxContainer/ParamOptions" to="." method="_on_param_options_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/SetDefaultButton" to="." method="_on_set_default_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/OKButton" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/CancelButton" to="." method="_on_cancel_button_pressed"]
